# TermDraft

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RUST_PORT.md  design-qa.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  markdown-gallery.md  releasing.md  semantic-editing.md
rust/src/: app.rs  bindings.rs  config.rs  continuation.rs  coordinate_diagnostic.rs  document.rs  editor.rs  lib.rs  main.rs  markdown.rs  markdown_help.rs  path_filter.rs  persistence.rs  recovery.rs  search.rs  semantic_blocks.rs  session.rs  theme.rs  ui.rs  workspace.rs  workspace_entries.rs
scripts/: check_line_length.py
src/termdraft/: __init__.py  __main__.py  app.py  benchmark.py  bindings.py  cli.py  config.py  default.tcss  icons.py
src/termdraft/models/: __init__.py  document.py
src/termdraft/screens/: __init__.py  command_palette.py  coordinate_inspector.py  dialogs.py  document_find.py  document_outline.py  recent_documents.py  semantic_inspector.py  semantic_reader.py
src/termdraft/services/: __init__.py  external_changes.py  file_search.py  inline_preview.py  markdown_continuation.py  markdown_preview.py  persistence.py  recovery.py  session.py  text_search.py  workspace_entries.py
src/termdraft/widgets/: __init__.py  dialog.py  editor.py  file_tree.py  preview.py  status_bar.py
src/termwriter/: __init__.py  __main__.py  app.py  benchmark.py  bindings.py  cli.py  config.py  default.tcss  icons.py
src/termwriter/models/: __init__.py  document.py  workspace.py
src/termwriter/screens/: __init__.py  coordinate_inspector.py  dialogs.py  document_find.py  document_outline.py  recent_documents.py  semantic_inspector.py  semantic_reader.py
src/termwriter/services/: __init__.py  coordinate_diagnostic.py  document_search.py  external_changes.py  file_search.py  markdown_continuation.py  markdown_preview.py  path_filter.py  persistence.py  recovery.py  semantic_blocks.py  session.py  text_search.py  workspace_entries.py
src/termwriter/widgets/: __init__.py  editor.py  file_tree.py  preview.py  scrollbar.py  status_bar.py
tests/: __init__.py  test_app.py  test_background_io.py  test_benchmark.py  test_cli.py  test_config.py  test_coordinate_diagnostic.py  test_customization.py  test_dialogs.py  test_document.py  test_document_find_ui.py  test_document_outline.py  test_document_search.py  test_empty_workspace.py  test_external_changes.py  test_file_search.py  test_icons.py  test_inline_preview.py  test_markdown_continuation.py  test_markdown_preview.py  test_modes.py  test_package_metadata.py  test_path_filter.py  test_persistence.py  test_recent_documents.py  test_recovery.py  test_save_as_duplicate.py  test_scrollbar.py  test_semantic_blocks.py  test_semantic_inspector.py  test_semantic_reader.py  test_session.py  test_state_paths.py  test_status_bar.py  test_tabs.py  test_text_search.py  test_text_search_ui.py  test_workspace.py  test_workspace_entries.py
