[package]
name = "termdraft-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Experimental Rust port of the TermDraft terminal Markdown editor"
license = "MIT"

[lib]
name = "termdraft"
path = "rust/src/lib.rs"

[[bin]]
name = "termdraft-rs"
path = "rust/src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "6"
ignore = "0.4"
libc = "0.2"
ratatui = "0.30"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
time = { version = "0.3.53", features = ["formatting"] }
toml = "1"
tui-markdown = { version = "0.3.8", default-features = false }
tui-textarea = { package = "tui-textarea-2", version = "0.12.1", features = ["search"] }
unicode-segmentation = "1"
unicode-width = "0.2"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = "thin"
strip = true

[lints.clippy]
all = "warn"
pedantic = "warn"

[lints.rust]
unsafe_code = "forbid"
