[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "termwriter"
version = "0.1.0"
description = "A local-first Markdown editor for the terminal"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "TermWriter contributors" }]
dependencies = [
    "textual[syntax]>=8.2.8,<9",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.17,<2",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
    "ruff>=0.12,<1",
]

[project.scripts]
termwriter = "termwriter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

