[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "termwriter"
version = "0.2.0"
description = "A local-first Markdown editor for the terminal"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "TermWriter contributors" }]
dependencies = [
    "markdown-it-py>=4.0,<5",
    "mdit-py-plugins>=0.6,<1",
    "regex>=2025.7,<2027",
    "Send2Trash>=2.1,<3",
    "textual[syntax]>=8.2.8,<9",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.17,<2",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
    "ruff>=0.12,<1",
    "types-Send2Trash>=2.1,<3",
    "types-regex>=2025.7,<2027",
]

[project.scripts]
termwriter = "termwriter.cli:main"
termwriter-benchmark = "termwriter.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
termwriter = ["*.tcss"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
