[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "termdraft"
version = "0.3.0"
description = "A local-first Markdown editor for the terminal"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "TermDraft contributors" }]
keywords = ["markdown", "terminal", "text-editor", "tui"]
classifiers = [
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Editors",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "markdown-it-py>=4.0,<5",
    "mdit-py-plugins>=0.6,<1",
    "regex>=2025.7,<2027",
    "Send2Trash>=2.1,<3",
    "textual[syntax]>=8.2.8,<9",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.17,<2",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
    "ruff>=0.12,<1",
    "types-Send2Trash>=2.1,<3",
    "types-regex>=2025.7,<2027",
]

[project.scripts]
termdraft = "termdraft.cli:main"
termdraft-benchmark = "termdraft.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
termdraft = ["*.tcss"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
